--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "matter": "^0.2.0",
     "parcel-bundler": "^1.12.5",
     "phaser": "^3.87.0",
     "sr": "^1.0.4",
